# ros_package_template

./: .gitignore  CMakeLists.txt  PACKAGE_README.md  README.md  package.xml  setup.fish
cfg/: PackageName.cfg
config/: package_name.param.yaml
include/package_name/: package_name.h  package_name_node.h
include/package_name_node/: package_name.h  package_name_node.h
launch/: package_name.launch
src/package_name/: main.cpp  package_name.cpp  package_name_node.cpp
src/package_name_node/: main.cpp  package_name.cpp  package_name_node.cpp
