<?xml version="1.0"?>
<package format="2">
  <name>package_name</name>
  <version>0.1.0</version>
  <description>The package_name package</description>
  <license>Apache 2</license>
  <author email="st14.828soccer@gmail.com">scepter914</author>
  <maintainer email="st14.828soccer@gmail.com">scepter914</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
