<?xml version="1.0"?>
<package format="2">
  <name>package_name</name>
  <version>0.1.0</version>
  <description>The package_name package</description>
  <license>Apache 2</license>
  <maintainer email="GIT_CONFIG_EMAIL">GIT_CONFIG_NAME</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
